# webserver

./: .gitmodules  CMakeLists.txt  README.md
include/: buffer.hpp  config.hpp.in  file.hpp  http.hpp  utils.hpp  webserver.hpp
include/http/: request.hpp  response.hpp  types.hpp
resources/: 400.html  403.html  404.html
resources/css/: error_page.css  style.css
resources/js/: event.js
src/: buffer.cpp  http.cpp  main.cpp  webserver.cpp
src/http/: request.cpp  response.cpp
src/http/request/: handler.cpp  parser.cpp
tests/: CMakeLists.txt  test_buffer.cpp  test_load_page.cpp
